--- a/app/views/editorial/_blocco_user_state.html.erb
+++ b/app/views/editorial/_blocco_user_state.html.erb
@@ -1,10 +1,11 @@
 <% if User.current.logged?  %>
   <div class="fs-block clearfix">
+    <!--
     <div class="fs-blockheader">
       <h3 class="t"><%= link_to(User.current.hide_name, my_profile_show_url, :class => 'button-grey') %></h3>
-    </div>
+    </div>   -->
     <div class="fs-blockcontent">
-      <div id="fs_informa" class="fs-informa">
+      <div id="fs_informa">
         <p><%= User.current.state %></p>
       </div>
     </div>
