--- a/app/views/settings/_authentication.html.erb
+++ b/app/views/settings/_authentication.html.erb
@@ -18,6 +18,5 @@
 
 <p><%= setting_check_box :rest_api_enabled %></p>
 </div>
-
-<%= submit_tag l(:button_save) %>
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
