--- a/app/views/settings/_display.html.erb
+++ b/app/views/settings/_display.html.erb
@@ -39,6 +39,5 @@
 
       <p class="mini-legend">NB:Per rendere visibili le immagini aggiornate occorre riavviare il server: contatare il webmaster. </p>
     </div>
-
-    <%= submit_tag l(:button_save) %>
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
