--- a/app/views/settings/_mail_handler.html.erb
+++ b/app/views/settings/_mail_handler.html.erb
@@ -20,6 +20,5 @@
       </p>
     </div>
 
-    <%= submit_tag l(:button_save) %>
-
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
