--- a/app/views/settings/_repositories.html.erb
+++ b/app/views/settings/_repositories.html.erb
@@ -88,5 +88,5 @@
                       :disabled => !Setting.commit_logtime_enabled?%></p>
 </fieldset>
 
-<%= submit_tag l(:button_save) %>
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
