--- a/app/views/settings/_static_pages.html.erb
+++ b/app/views/settings/_static_pages.html.erb
@@ -25,7 +25,7 @@
         <%= setting_text_area :static_page_abbonamenti, :label => false %>
       </fieldset>
       &nbsp; <br/>
-      <%= submit_tag l(:button_save) %>
+      <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
     </div>
 <% end %>
 
