--- a/app/views/settings/_issues.html.erb
+++ b/app/views/settings/_issues.html.erb
@@ -20,6 +20,5 @@
 <%= setting_multiselect(:issue_list_default_columns,
         Query.new.available_columns.collect {|c| [c.caption, c.name.to_s]}, :label => false) %>
 </fieldset>
-
-<%= submit_tag l(:button_save) %>
+    <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
