--- a/app/views/settings/_notifications.html.erb
+++ b/app/views/settings/_notifications.html.erb
@@ -37,7 +37,7 @@
           <div style="float:right;">
             <%= link_to l(:label_send_test_email), :controller => 'admin', :action => 'test_email' %>
           </div>
-          <%= submit_tag l(:button_save) %>
+          <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
         </div>
     <% end %>
 <% else %>
