--- a/app/views/editorial/_edizione_smtp_convention.html.erb
+++ b/app/views/editorial/_edizione_smtp_convention.html.erb
@@ -2,6 +2,7 @@
   <tr>
     <td width="500" bgcolor="#ffffff" align="right" style="vertical-align: middle;">
       <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:15px; color:#1e1e1e; line-height:18px; font-weight: bold;">
+        <%= @user %>
         <% if @user %>
             <%= user_myasso_text(@user) %>
         <% end %>
@@ -14,8 +15,15 @@
     </td>
   </tr>
 </table>
-   <% unless @user.convention.nil? %>
+   <% if @user.convention &&  !@user.convention.nil? %>
     <table width="560" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+              <td align="center" valign="bottom" style="text-align: center;">
+                <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-style:italic; font-size:12px; color:#a03120; line-height:15px;">
+                  <span style="margin-top: 10px;">
+                  <%= 'Il suo abbonamento  a Fiscosport è offerto da:' %> </span></font>
+              </td>
+            </tr>
       <% if  @user.convention.presidente? %>
           <tr>
             <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
