--- a/app/views/editorial/_edizione_smtp_convention.html.erb
+++ b/app/views/editorial/_edizione_smtp_convention.html.erb
@@ -1,8 +1,7 @@
 <table width="560" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td width="500" bgcolor="#ffffff" align="right" style="vertical-align: middle;">
+    <td width="500" bgcolor="#ffffff" align="right" style="padding-top: 14px ;">
       <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:15px; color:#1e1e1e; line-height:18px; font-weight: bold;">
-        <%= @user %>
         <% if @user %>
             <%= user_myasso_text(@user) %>
         <% end %>
@@ -17,73 +16,67 @@
 </table>
    <% if @user.convention &&  !@user.convention.nil? %>
     <table width="560" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-              <td align="center" valign="bottom" style="text-align: center;">
-                <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-style:italic; font-size:12px; color:#a03120; line-height:15px;">
-                  <span style="margin-top: 10px;">
-                  <%= 'Il suo abbonamento  a Fiscosport è offerto da:' %> </span></font>
-              </td>
-            </tr>
+
       <% if  @user.convention.presidente? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
-              <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
-                <%= l(:label_presidente) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 5px;">
+              <span style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
+                <%= l(:label_presidente) %>    </span></td>
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.presidente %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.indirizzo? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_indirizzo) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.indirizzo %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.comune.name? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_comune) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.comune.name %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.telefono? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_telefono) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.telefono %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.telefono_alt? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_telefono_alt) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.telefono_alt %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.fax? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_fax) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.fax %>    </td>
           </tr>
       <% end %>
       <% if  @user.convention.email? %>
           <tr>
-            <td width="50%" bgcolor="#ffffff" align="left" style="vertical-align: middle;">
+            <td width="40%" bgcolor="#ffffff" align="left" style="vertical-align: middle; padding: 2px 5px;">
               <font style="font-family:Arial, Helvetica, sans-serif; font-size:0.9em; color:#1e1e1e; line-height:14px; font-style:italic;">
                 <%= l(:label_email) %>    </font></td>
-            <td width="50%" align="left">
+            <td width="60%" align="left" style="font-weight: bold;">
               <%= h @user.convention.email %>    </td>
           </tr>
       <% end %>
