fix data scadenza

--- a/app/views/editorial/_blocco_user_state.html.erb
+++ b/app/views/editorial/_blocco_user_state.html.erb
@@ -1,4 +1,4 @@
-<% if User.current.logged?  %>
+<% if User.current.logged? &&  !User.current.state.empty?  %>
   <div class="fs-block clearfix">
     <!--
     <div class="fs-blockheader">
