--- a/app/views/newsletters/_users_newsletter_emailed.erb
+++ b/app/views/newsletters/_users_newsletter_emailed.erb
@@ -4,38 +4,38 @@
   <table class="list users">
     <thead>
     <th style="text-align:left;"><%= l(:field_mail) %></th>
-    <th style="text-align:left;"><%= l(:label_user) %>&nbsp;(<%= l(:field_due_date) %>)</th>
+    <th style="text-align:left;"><%= l(:label_nl_usr) %>&nbsp;(<%= l(:field_due_date) %>)</th>
     <th style="text-align:left;" title="Attenzione questo è il ruolo attuale e non quello al momento dell'invio della mail"><%= l(:field_role) %></th>
     <th style="text-align:left;"><%= l(:field_convention) %></th>
     <th style="text-align:left;"><%= l(:field_updated_on) %></th>
     </thead>
     <tbody>
     <%#.sort_by(&:sended) undefined method `<=>' for false:FalseClass %>
-    <% @nl_users.each do |user| %>
-        <tr id="user-<%= user.id %>" class="user">
+    <% @nl_users.each do |nl_usr| %>
+        <tr id="nl_usr-<%= nl_usr.id %>" class="nl_usr">
           <td>
-            <div style="width:1px;" class="flash <%= user.sended? ? 'notice' : (user.errore.nil? ? 'warning' : 'error') %>" title="<%= user.errore.nil? ? '' : user.errore %>">&nbsp;</div>
+            <div style="width:1px;" class="flash <%= nl_usr.sended? ? 'notice' : (nl_usr.errore.nil? ? 'warning' : 'error') %>" title="<%= nl_usr.errore.nil? ? '' : nl_usr.errore %>">&nbsp;</div>
           </td>
           <td>
-            <%= link_to_user(user.user, {:target => "_blank", :class => 'icon icon-preview'}) unless User.current.admin? %>
-            <%= link_to(h(user.user.name), edit_user_path(:id => user.user), {:target => "_blank", :class => 'icon icon-preview'}) unless !User.current.admin? %><br /><%= ("(" + format_date(user.data_scadenza) + ")") unless user.data_scadenza.nil? %>
+            <%= link_to_nl_usr(nl_usr.nl_usr, {:target => "_blank", :class => 'icon icon-preview'}) unless User.current.admin? %>
+            <%= link_to(h(nl_usr.nl_usr.name), edit_nl_usr_path(:id => nl_usr.nl_usr), {:target => "_blank", :class => 'icon icon-preview'}) unless !User.current.admin? %><br /><%= ("(" + format_date(nl_usr.data_scadenza) + ")") unless nl_usr.data_scadenza.nil? %>
           </td>
           <td class="ico" align="left">
-            <%= user_role_iconized(nil, :size => 'l', :icon_for => get_role_css(user.user.role_id), :text => '') %>
+            <%= nl_usr_role_iconized(nil, :size => 'l', :icon_for => get_role_css(nl_usr.nl_usr.role_id), :text => '') %>
           </td>
           <td>
-            <%= link_to(h(user.convention), convention_path(:id => user.convention), {:target => "_blank", :class => 'icon icon-preview'}) unless user.convention_id.nil? %>
+            <%= link_to(h(nl_usr.convention), convention_path(:id => nl_usr.convention), {:target => "_blank", :class => 'icon icon-preview'}) unless nl_usr.have_convention? %>
           </td>
           <td>
-            <%= format_date(user.updated_at) %>
+            <%= format_date(nl_usr.updated_at) %>
           </td>
         </tr>
-        <% if !user.errore.nil? && !user.errore.empty? %>
+        <% if !nl_usr.errore.nil? && !nl_usr.errore.empty? %>
         <tr>
           <td></td>
           <td colspan="4">
             <div class="flash error">
-              <%= user.errore%>
+              <%= nl_usr.errore%>
             </div>
           </td>
         </tr>
